# rume

./: .gitignore  README.md  install.sh  pyproject.toml
src/rume/: hitl.py  main.py  schemas.py  state.py
src/rume/flows/: repo_flow.py  system_flow.py
src/rume/prompts/: __init__.py  execute.md  generate_rume.md  observe.md  observe_system.md  plan.md  plan_system.md  verify.md  verify_system.md
src/rume/tools/: docker.py  git.py  process.py
