[project]
name = "rume"
version = "0.1.0"
description = "Get any system running — automatically."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chakpy[tools]>=0.4.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "rillpy>=0.1.1",
]

[project.scripts]
rume = "rume.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rume"]

[tool.uv.sources]
# Local development: use editable installs from sibling directories.
# Other developers without these directories should comment out this
# section and run `uv lock` to fall back to PyPI versions.
chakpy = { path = "../chak-ai", editable = true }
rillpy = { path = "../rill-ai", editable = true }
